--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </style>
 </head>
 <body>
-  <h1>欢迎来到我的 AI 智能笔记软件 very Good</h1>
+  <h1>欢迎来到我的 AI 智能笔记软件 very Good code</h1>
   <p>
     这是一款结合 AI 技术与 SAP 专业知识的智能笔记工具，帮助你高效整理、检索和理解企业数据。
   </p>
