--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </p>
   <a href="https://github.com/你的用户名/你的仓库名" class="button">查看源码</a>
 
-  <footer>© 2025 My AI Notes · Powered by XSAP</footer>
+  <footer>© 2025 My AI Notes · Powered by XSAP.net</footer>
 </body>
 </html>
 
