--- a/index.html
+++ b/index.html
@@ -1,60 +1,56 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>我的 AI 智能笔记软件</title>
-  <style>
-    body {
-      font-family: "Segoe UI", sans-serif;
-      margin: 0;
-      background: linear-gradient(135deg, #eef2f3, #8e9eab);
-      color: #333;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
-    h1 {
-      font-size: 2.2rem;
-      margin-bottom: 0.5rem;
-    }
-    p {
-      font-size: 1.1rem;
-      max-width: 600px;
-      text-align: center;
-      margin-bottom: 1.5rem;
-    }
-    a.button {
-      display: inline-block;
-      padding: 10px 20px;
-      background-color: #0078d7;
-      color: white;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: background-color 0.3s;
-    }
-    a.button:hover {
-      background-color: #005ea2;
-    }
-    footer {
-      position: absolute;
-      bottom: 20px;
-      font-size: 0.9rem;
-      color: #555;
-    }
-  </style>
+  <title>XSAP - 智能SAP工具生态</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <h1>欢迎来到我的 AI 智能笔记软件 免费尝鲜使用</h1>
-  <p>
-    这是一款结合 AI 技术与 SAP 专业知识的智能笔记工具，帮助你高效整理、检索和理解企业数据。
-  </p>
-  <a href="https://github.com/你的用户名/你的仓库名" class="button">查看源码</a>
+  <header>
+    <h1>XSAP 智能企业工具套件</h1>
+    <p>让 SAP 的使用更轻松、更智能、更高效。</p>
+  </header>
 
-  <footer>© 2025 My AI Notes · Powered by XSAP.net</footer>
+  <main class="product-grid">
+    <div class="product-card">
+      <img src="images/sap-notes-app.png" alt="SAP 笔记 App">
+      <h2>SAP 笔记 App</h2>
+      <p>一款智能的 SAP 专业笔记应用，助你随时记录、搜索、归纳知识。</p>
+      <a href="products/sap-notes-app.html" class="btn">了解更多</a>
+    </div>
+
+    <div class="product-card">
+      <img src="images/smart-mail-client.png" alt="智能邮件客户端">
+      <h2>智能邮件客户端</h2>
+      <p>集成 AI 回复、SAP 文档识别与任务跟踪的智能邮件系统。</p>
+      <a href="products/smart-mail-client.html" class="btn">了解更多</a>
+    </div>
+
+    <div class="product-card">
+      <img src="images/sap-process.png" alt="SAP 流程管理">
+      <h2>SAP 流程管理</h2>
+      <p>可视化的流程建模与审批系统，让 SAP 流程更加灵活。</p>
+      <a href="products/sap-process.html" class="btn">了解更多</a>
+    </div>
+
+    <div class="product-card">
+      <img src="images/sap-gantt.png" alt="SAP 甘特图">
+      <h2>SAP 甘特图</h2>
+      <p>动态可交互的项目排程视图，支持进度控制与资源分配。</p>
+      <a href="products/sap-gantt.html" class="btn">了解更多</a>
+    </div>
+
+    <div class="product-card">
+      <img src="images/sap-login.png" alt="SAP 登录系统管理">
+      <h2>SAP 登录系统管理</h2>
+      <p>统一登录管理平台，支持多系统凭据同步与安全审计。</p>
+      <a href="products/sap-login.html" class="btn">了解更多</a>
+    </div>
+  </main>
+
+  <footer>
+    <p>© 2025 XSAP.NET | 智能 SAP 工具生态平台</p>
+  </footer>
 </body>
 </html>
-
