--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>XSAP 智能企业工具套件 最新</h1>
+    <h1>XSAP 智能企业工具套件 最新更新</h1>
     <p>让 SAP 的使用更轻松、更智能、更高效。</p>
   </header>
 
